--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "barryvdh/laravel-debugbar": "^2.1",
         "laravel/socialite": "^2.0",
         "thiagoalessio/tesseract_ocr": "^0.2.1",
-        "laravelcollective/html": "~5.0"
+        "laravelcollective/html": "~5.0",
+        "stichoza/google-translate-php": "^3.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
